--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,8 @@
 PORT=3001
 NODE_ENV=development
 
-# Database
+# Database - Production MongoDB
+# Replace with your MongoDB connection string
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
 
 # Authentication
@@ -11,7 +12,19 @@ JWT_EXPIRES_IN=7d
 
 # Firebase
 FIREBASE_API_KEY=your_firebase_api_key_here
+FIREBASE_PROJECT_ID=freelancing-platform-v2
+FIREBASE_AUTH_DOMAIN=freelancing-platform-v2.firebaseapp.com
+FIREBASE_STORAGE_BUCKET=freelancing-platform-v2.firebasestorage.app
+FIREBASE_MESSAGING_SENDER_ID=713504655146
+FIREBASE_APP_ID=1:713504655146:web:1d73bc6ffcdb61a8938053
+
+# Cloudinary (Image Storage)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+CLOUDINARY_BASE_URL=https://res.cloudinary.com/your_cloud_name
+CLOUDINARY_UPLOAD_URL=https://api.cloudinary.com/v1_1/your_cloud_name
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:19006
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:19006,https://freelancing-platform-backend-backup.onrender.com
 
