Add authentication routes (send-otp, verify-otp) to backend and update mobile app navigation

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -40,7 +40,8 @@
           "photosPermission": "The app needs access to your photos to upload profile pictures and documents.",
           "cameraPermission": "The app needs access to your camera to take photos."
         }
-      ]
+      ],
+      "expo-font"
     ],
     "scheme": "people-app",
     "extra": {
