--- a/mobile-app/eas.json
+++ b/mobile-app/eas.json
@@ -13,7 +13,10 @@
       "ios": {
         "simulator": true
       },
-      "credentialsSource": "remote"
+      "credentialsSource": "remote",
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://freelancing-platform-backend-backup.onrender.com"
+      }
     },
     "preview": {
       "distribution": "internal",
@@ -31,4 +34,3 @@
     "production": {}
   }
 }
-
