--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -14,11 +14,12 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
-    "@react-navigation/stack": "^7.6.12",
+    "@react-navigation/native-stack": "^7.8.6",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.29",
     "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.10",
     "expo-secure-store": "^15.0.8",
@@ -28,7 +29,6 @@
     "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0"
   },
