--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,3 +28,14 @@ CLOUDINARY_UPLOAD_URL=https://api.cloudinary.com/v1_1/your_cloud_name
 # CORS
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:19006,https://freelancing-platform-backend-backup.onrender.com
 
+# Cashfree Payment Gateway
+CASHFREE_CLIENT_ID=your_cashfree_client_id
+CASHFREE_CLIENT_SECRET=your_cashfree_client_secret
+CASHFREE_API_VERSION=2023-08-01
+CASHFREE_ENV=production
+BACKEND_URL=https://freelancing-platform-backend-backup.onrender.com
+
+CASHFREE_CLIENT_ID=your_cashfree_client_id
+CASHFREE_CLIENT_SECRET=your_cashfree_client_secret
+CASHFREE_API_VERSION=2023-08-01
+CASHFREE_ENV=production
