--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -32,7 +32,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-phonepe-pg": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-mobile-react-native-sdk/releases/v2/react-native-phonepe-pg.tgz",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0"
   },
   "private": true,
   "devDependencies": {
