--- a/mobile-app/.gitignore
+++ b/mobile-app/.gitignore
@@ -13,10 +13,12 @@ expo-env.d.ts
 .kotlin/
 *.orig.*
 *.jks
+*.keystore
 *.p8
 *.p12
 *.key
 *.mobileprovision
+keystore.properties
 
 # Metro
 .metro-health-check*
