--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "pg-sdk-node": "^2.0.2",
+    "socket.io": "^4.8.3",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
