--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -33,7 +33,8 @@
     "react-native-phonepe-pg": "^3.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "socket.io-client": "^4.8.3"
   },
   "private": true,
   "devDependencies": {
