--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "People App",
+    "name": "People",
     "slug": "mobile-app",
     "version": "1.0.0",
     "orientation": "portrait",
