--- a/mobile-app/eas.json
+++ b/mobile-app/eas.json
@@ -25,9 +25,11 @@
       }
     },
     "production": {
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
-      }
+      },
+      "credentialsSource": "remote"
     }
   },
   "submit": {
